--- a/css/styles.css
+++ b/css/styles.css
@@ -30,3 +30,8 @@ fieldset{
     color: white;
 
 }
+.jumbotron{
+    background-color: rgba(0, 0, 0, 1);
+    box-shadow: 2px 2px 2px 10px rgba(0, 0, 0, 1);
+
+}
