--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,8 @@
 body {
     background-color: #333333;
+    box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+   min-height: 100vh;
+    height: 100%;
 }
 
 
@@ -8,7 +11,7 @@ h3 {
     text-align: center;
 }
 .presentation{
-    margin-top: 20%;
+    margin-top: 15%;
 
 }
 .texte-presentation{
@@ -34,4 +37,8 @@ fieldset{
     background-color: rgba(0, 0, 0, 1);
     box-shadow: 2px 2px 2px 10px rgba(0, 0, 0, 1);
 
+}
+.titretuto{
+    color: white;
+    margin-top: 5%;
 }
