--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body {
-    background-color: #333333;
+    /*background-color: #333333;*/
+    background-color: #5a519991;
     box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
    min-height: 100vh;
     height: 100%;
@@ -34,11 +35,17 @@ fieldset{
 
 }
 .jumbotron{
-    background-color: rgba(0, 0, 0, 1);
-    box-shadow: 2px 2px 2px 10px rgba(0, 0, 0, 1);
+    background-color: #a19cc5;
+    box-shadow: 2px 2px 20px 1px rgba(0, 0, 0, 1);
 
 }
 .titretuto{
     color: white;
     margin-top: 5%;
+}
+.condition{
+    color: black;
+}
+.mentiontitre{
+    color: black;
 }
