--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ fieldset{
 }
 .jumbotron{
     background-color: #a19cc5;
-    box-shadow: 2px 2px 20px 1px rgba(0, 0, 0, 1);
+    /*box-shadow: 2px 2px 20px 1px rgba(0, 0, 0, 1);*/
 
 }
 .titretuto{
