--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,10 @@ body {
     /*background-color: #333333;*/
     background-color: #5a519991;
     box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
-   min-height: 100vh;
+    min-height: 100vh;
     height: 100%;
+
+
 }
 
 
@@ -11,50 +13,87 @@ h3 {
     color: white;
     text-align: center;
 }
-.presentation{
+
+.presentation {
     margin-top: 15%;
 
 }
-.texte-presentation{
+
+.texte-presentation {
     color: white;
 
 }
+
 .btn:hover {
     background-color: #333333;
     color: white;
 }
-.btn{
+
+.btn {
     background-color: white;
     color: #333333;
     font-weight: bold;
     margin-top: 10%;
+    font-family: 'Montserrat', sans-serif;
+
 }
-fieldset{
+
+fieldset {
     margin-top: 10%;
     color: white;
 
 
 }
-.jumbotron{
+
+.jumbotron {
     background-color: #a19cc5;
+    animation: 1s SlideDown;
     /*box-shadow: 2px 2px 20px 1px rgba(0, 0, 0, 1);*/
 
 }
-.titretuto{
+
+
+.titretuto {
     color: white;
     margin-top: 5%;
 }
-.condition{
+
+.condition {
     color: black;
 }
-.mentiontitre{
+
+.mentiontitre {
     color: black;
 }
-textarea{
+
+textarea {
     height: 200px;
 }
-.btn-ticket{
+
+.btn-ticket {
 
 
+}
+
+#titre-formulaire {
+    font-size: 3em;
+    font-family: 'Montserrat', sans-serif;
+
+}
+
+.contact {
+    font-family: 'Montserrat', sans-serif;
+}
+
+@keyframes SlideDown {
+    from {
+        transform: translateY(200px);
+        opacity: 0;
+    }
+    to {
+        transform: translateY(0);
+        opacity: 1;
+
+    }
 
 }
