--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body {
-    /*background-color: #333333;*/
-    background-color: #5a519991;
+    background-color: #333333;
+    /*background-color: #5a519991;*/
     box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
     min-height: 100vh;
     height: 100%;
@@ -96,4 +96,7 @@ textarea {
 
     }
 
+}
+.tutojs-title h3{
+    color: black;
 }
